feat: remove grants endpoint (#1386)
* feat: remove grants endpoint

* refactor: remove unused grants function in DclData
